--- a/cmd/web/index.html
+++ b/cmd/web/index.html
@@ -1,59 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Nullify Chat</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Nullable Chat</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/offcanvas/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.0/examples/offcanvas/offcanvas.css" rel="stylesheet">
 </head>
-<body>
-<div id="log"></div>
-<form id="form">
-    <label for="message"></label>
-    <input type="text" id="message" autofocus size="64" autocomplete="off">
-    <input type="submit" value="Send">
-</form>
 
-<script type="text/javascript">
-    window.onload = () => {
-        function appendLog(item) {
-            let doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-            log.appendChild(item);
-            if (doScroll) {
-                log.scrollTop = log.scrollHeight - log.clientHeight;
-            }
-        }
+<body class="bg-light">
 
-        let ws;
-        let log = document.getElementById("log")
+<nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Nullable Chat</a>
+    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</nav>
 
-        const params = location.href.split("/")
-        const roomID = params[params.length - 1]
-        const host = document.location.host
-        const wsURL = "ws://" + host + "/ws/" + roomID
+<div class="nav-scroller bg-white box-shadow">
+    <nav class="nav nav-underline">
+        <a class="nav-link" href="#">
+            Chat Rooms
+            <span class="badge badge-pill bg-light align-text-bottom">27</span>
+        </a>
+        <a class="nav-link" href="#">Explore</a>
+    </nav>
+</div>
 
-        console.log(wsURL)
-        ws = new WebSocket(wsURL)
+<main role="main" class="container">
+    <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
+        <img class="mr-3" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-outline.svg" alt="" width="48"
+             height="48">
+        <div class="lh-100">
+            <h6 class="mb-0 text-white lh-100">Nullable Chat</h6>
+            <small>Go At Work</small>
+        </div>
+    </div>
 
-        ws.onmessage = (e) => {
-            let message = JSON.parse(e.data)
+    <!--    <div class="my-3 p-3 bg-white rounded box-shadow">-->
+    <!--        <h6 class="border-bottom border-gray pb-2 mb-0">Chat Rooms</h6>-->
+    <!--        <div class="media text-muted pt-3">-->
+    <!--            <img data-src="holder.js/32x32?theme=thumb&bg=007bff&fg=007bff&size=1" alt="" class="mr-2 rounded">-->
+    <!--            <p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">-->
+    <!--                <strong class="d-block text-gray-dark">@username</strong>-->
+    <!--                This is a chat room description-->
+    <!--            </p>-->
+    <!--        </div>-->
+    <!--    </div>-->
 
-            let item = document.createElement('div')
-            item.innerText = message.body
+    <div class="my-3 p-3 bg-white rounded box-shadow">
+        <h6 class="border-bottom border-gray pb-2 mb-0">New Chat Room</h6>
+        <div class="row">
+            <div class="col-md-12">
+                <form id="chatroom-form">
+                    <div class="form-group">
+                        <label for="chatroom-name"></label>
+                        <input type="text" class="form-control" id="chatroom-name" autocomplete="off"
+                               placeholder="Enter room name...">
+                    </div>
+                    <button type="submit" id="create-chatroom" class="btn btn-primary btn-sm float-right" disabled>
+                        Create Chat Room
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</main>
 
-            appendLog(item)
-        }
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+<script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/popper.min.js"></script>
+<script src="https://getbootstrap.com/docs/4.0/dist/js/bootstrap.min.js"></script>
+<script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/holder.min.js"></script>
+<script src="https://getbootstrap.com/docs/4.0/examples/offcanvas/offcanvas.js"></script>
 
-        let message = document.getElementById("message")
+<script>
+    let chatRoomEl = document.getElementById("chatroom-name")
 
-        document.getElementById("form").onsubmit = (e) => {
-            e.preventDefault()
+    chatRoomEl.oninput = (e) => {
+        let createChatroomBtn = document.getElementById("create-chatroom")
 
-            if (!ws || !message.value) {
-                return
-            }
+        e.target.value ?
+            createChatroomBtn.removeAttribute("disabled") :
+            createChatroomBtn.setAttribute("disabled", "disabled")
+    }
 
-            ws.send(message.value)
-            message.value = ""
-        }
+    document.getElementById("chatroom-form").onsubmit = (e) => {
+        e.preventDefault()
+        let chatroomName = chatRoomEl.value.replaceAll(' ', '-')
+
+        location.href = `/room/${chatroomName}`
+
+        console.log(chatroomName)
     }
 </script>
 </body>
