Remove the navbar

--- a/cmd/web/chat.html
+++ b/cmd/web/chat.html
@@ -40,15 +40,15 @@
     </button>
 </nav>
 
-<div class="nav-scroller bg-white box-shadow">
-    <nav class="nav nav-underline">
-        <a class="nav-link" href="#">
-            Chat Rooms
-            <span class="badge badge-pill bg-light align-text-bottom">27</span>
-        </a>
-        <a class="nav-link" href="#">Explore</a>
-    </nav>
-</div>
+<!--<div class="nav-scroller bg-white box-shadow">-->
+<!--    <nav class="nav nav-underline">-->
+<!--        <a class="nav-link" href="#">-->
+<!--            Chat Rooms-->
+<!--            <span class="badge badge-pill bg-light align-text-bottom">27</span>-->
+<!--        </a>-->
+<!--        <a class="nav-link" href="#">Explore</a>-->
+<!--    </nav>-->
+<!--</div>-->
 
 <main role="main" class="container" id="chat-messages">
     <div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded box-shadow">
